--- a/index.html
+++ b/index.html
@@ -15,67 +15,27 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
     <script src="js/jquery.js"></script>
-    <script src="https://unpkg.com/@panzoom/panzoom@4.5.0/dist/panzoom.min.js"></script>
   </head>
 
   <body>
     <div class="background">
-      <div class="button-back" id="back">back</div>
-      <button class="button-map" id="button-lab"></button>
-      <button class="button-map" id="button-interchange"></button>
-      <button class="button-map" id="button-customs"></button>
-      <button class="button-map" id="button-woods"></button>
-      <button class="button-map" id="button-factory"></button>
-      <button class="button-map" id="button-reserve"></button>
-      <button class="button-map" id="button-lighthouse"></button>
-      <button class="button-map" id="button-shoreline"></button>
+      <button class="button-map" id="lab"></button>
+      <button class="button-map" id="interchange"></button>
+      <button class="button-map" id="customs"></button>
+      <button class="button-map" id="woods"></button>
+      <button class="button-map" id="factory"></button>
+      <button class="button-map" id="reserve"></button>
+      <button class="button-map" id="lighthouse"></button>
+      <button class="button-map" id="shoreline"></button>
     </div>
     <img src="" id="map_img">
   </body>
 
   <script>
     $( '.button-map' ).on('click', function(e) {
-      // const mapelem = document.getElementById('map_img')
-      // const mapZoom = Panzoom(mapelem, {
-      //   maxScale: 5
-      // })
-      // mapZoom.pan(10, 10)
-      // mapZoom.zoom(1, { animate: true })
-      // mapelem.parentElement.addEventListener('wheel', mapZoom.zoomWithWheel)
-      $( '.button-map' ).css('visibility', 'hidden')
-      $( '.background' ).css('visibility', 'hidden')
-      $( '.button-back' ).css('visibility', 'visible')
-      $( '#map_img' ).css('visibility', 'visible')
-      $( '#map_img' ).css('width', '100%')
-      $( '#map_img' ).css('height', 'auto')
-      switch (e.target.id) {
-        case ('button-customs'):
-          $( '#map_img' ).attr("src", "img/customs.png");
-          break;
-        case ('button-lab'):
-          $( '#map_img' ).attr("src", "img/lab.png");
-          break;
-        case ('button-interchange'):
-          $( '#map_img' ).attr("src", "img/interchange.png");
-          break;
-        case ('button-woods'):
-          $( '#map_img' ).attr("src", "img/woods.png");
-          break;
-        case ('button-factory'):
-          $( '#map_img' ).attr("src", "img/factory.png");
-          break;
-        case ('button-reserve'):
-          $( '#map_img' ).attr("src", "img/reserve.png");
-          break;
-        case ('button-lighthouse'):
-          $( '#map_img' ).attr("src", "img/lighthouse.png");
-          break;
-        case ('button-shoreline'):
-          $( '#map_img' ).attr("src", "img/shoreline.png");
-          break;
-        default:
-          break;
-      }
+      var loc = window.location;
+      var newLoc = '/map.html?mapname=' + e.target.id;
+      window.location = newLoc;
     });
 
     $( '.button-map' ).on('mouseenter', function(e) {
@@ -85,12 +45,6 @@
     $( '.button-map' ).on('mouseleave', function(e) {
       $( this ).css('opacity', '0%')
     });
-
-    $( '.button-back' ).on('click', function(e) {
-      $( '.button-back' ).css('visibility', 'hidden')
-      $( '.background' ).css('visibility', 'visible')
-      $( '.button-map' ).css('visibility', 'visible')
-    })
   </script>
 
 </html>
