--- a/map.html
+++ b/map.html
@@ -88,17 +88,17 @@
     map.fitBounds(bounds);
 
     $( '.button-back' ).on('mouseenter', function(e) {
-      $( this ).css('opacity', '80%')
-      $( this ).css('border', '2px solid black')
+      $( this ).css('opacity', '80%');
+      $( this ).css('border', '2px solid black');
     });
 
     $( '.button-back' ).on('mouseleave', function(e) {
-      $( this ).css('opacity', '50%')
-      $( this ).css('border', '1px solid black')
+      $( this ).css('opacity', '50%');
+      $( this ).css('border', '1px solid black');
     });
 
     $( '.button-back' ).on('click', function(e) {
-      window.location = '/'
+      window.location = '/';
     });
   </script>
 
