another quick fix

--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
       if (loc.pathname === '/') {
         newLoc = '/map.html?mapname=' + e.target.id;
       }
-      console.log(newLoc)
-      // window.location = newLoc;
+      window.location = newLoc;
     });
 
     $( '.button-map' ).on('mouseenter', function(e) {
